balances: z-index fix

--- a/src/scss/components/account-view/cards/balances/balance-token.component.scss
+++ b/src/scss/components/account-view/cards/balances/balance-token.component.scss
@@ -18,6 +18,7 @@ $border-color: v.$border-color;
   position: relative;
   top: 0;
   left: 0;
+  z-index: 0;
 }
 
 :host.first .balance {
